--- a/media.html
+++ b/media.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/media.css" />
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <title>WeiHao Music</title>
   </head>
   <body>
