--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/index.css" />
-    <title>WeiHao Music</title>
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    <title>Weihao Sun Music</title>
   </head>
   <body>
 
