changing index with wide image and text overleay

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
     </nav>
   </div>
 
-  <div id="main">
-    <img id="image" src="" alt="Picture of Weihao" />
-    <p id="introduction"></p>
+<div id="main">
+  <div class="image-wrapper">
+    <img id="image" src="your-image.jpg" alt="Picture of Weihao" />
+    <p id="introduction">Your introduction text goes here.</p>
   </div>
+</div>
+
 
   <script src="assets/js/content.js"></script>
   </body>
