changing overall look

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="data/font.css">
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/about.css" />
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <title>WeiHao Music</title>
@@ -13,8 +14,9 @@
   <body>
 
   <div id="top-container">
-    <header id="site-title"></header>
+    <!-- <header id="site-title"></header> -->
     <nav>
+      <header class="nav-name" id="site-title"></header>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="service.html">Service</a></li>
@@ -25,9 +27,35 @@
   </div>
 
   <div id="main">
-    <img id="horizontal" src="" alt="Picture of Weihao" />
-    <p id="about-section"></p>
+  <div class="main">
+    <div class="text">
+         <p id="about-title"></p>
+        <p id="about-section"></p>
+    </div>
+    <div class="image-wrapper">
+      <img id="horizontal" src="" alt="Picture of Weihao" />
+      <img id="hover-gif" src="assets/images/test.gif" alt="Animated Gif" />
+    </div>
   </div>
+  </div>
+
+  <footer class="bottom-container">
+    <a href="https://wa.me/31640077233" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://instagram.com/sun_wei_hao" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://youtube.com/@WeihaoSun-w6o" target="_blank">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="mailto:weihao612@email.com">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.super-prof.nl/jazztrompettist-met-ervaring-geeft-trompetles-jazz-improvisatie-bandleiding-muziektheorie-alle-niveaus.html">
+      <i class="fa-solid fa-book"></i>
+    </a>
+  </footer>
 
   <script src="assets/js/content.js"></script>
   </body>
