--- a/lessons.html
+++ b/lessons.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="data/font.css">
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/contact.css" />
     <title>WeiHao Music</title>
   </head>
   <body>
 
   <div id="top-container">
-    <header id="site-title"></header>
+    <!-- <header id="site-title"></header> -->
     <nav>
+      <header class="nav-name" id="site-title"></header>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="service.html">Service</a></li>
@@ -23,6 +25,7 @@
     </nav>
   </div>
 
+  <div id="main">
   <div id="contact-container">
     <h1 id="header"></h1>
     <!-- use this in the future: https://www.reddit.com/r/webdev/comments/v4s2w5/created_a_free_formspree_alternative_solution_to/ -->
@@ -41,7 +44,26 @@
     <div id="form-status"></div>
 
   </div>
+</div>
 
+<footer class="bottom-container">
+    <a href="https://wa.me/31640077233" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://instagram.com/sun_wei_hao" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://youtube.com/@WeihaoSun-w6o" target="_blank">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="mailto:weihao612@email.com">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.super-prof.nl/jazztrompettist-met-ervaring-geeft-trompetles-jazz-improvisatie-bandleiding-muziektheorie-alle-niveaus.html">
+      <i class="fa-solid fa-book"></i>
+    </a>
+    
+  </footer>
 
   <script src="assets/js/content.js"></script>
   </body>
