--- a/media.html
+++ b/media.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="data/font.css">
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/media.css" />
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <title>WeiHao Music</title>
@@ -13,8 +14,8 @@
   <body>
 
   <div id="top-container">
-    <header id="site-title"></header>
     <nav>
+      <header class="nav-name" id="site-title"></header>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="service.html">Service</a></li>
@@ -24,6 +25,7 @@
     </nav>
   </div>
 
+  <div id="main">
   <div id="bands">
     <a class="band-item" href="jazzmine.html">
       <img id="jazzmine-cover" src="" alt="">
@@ -45,6 +47,25 @@
       <span id="spbb"></span>
     </a>
   </div>
+  </div>
+
+  <footer class="bottom-container">
+    <a href="https://wa.me/31640077233" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://instagram.com/sun_wei_hao" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://youtube.com/@WeihaoSun-w6o" target="_blank">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="mailto:weihao612@email.com">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.super-prof.nl/jazztrompettist-met-ervaring-geeft-trompetles-jazz-improvisatie-bandleiding-muziektheorie-alle-niveaus.html">
+      <i class="fa-solid fa-book"></i>
+    </a>
+  </footer>
 
   <script src="assets/js/content.js"></script>
   </body>
