--- a/ejo.html
+++ b/ejo.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="data/font.css">
     <link rel="stylesheet" href="data/colors.css">
     <link rel="stylesheet" href="assets/css/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bands.css" />
     <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
     <title>WeiHao Music</title>
@@ -13,8 +14,9 @@
   <body>
 
   <div id="top-container">
-    <header id="site-title"></header>
+    <!-- <header id="site-title"></header> -->
     <nav>
+      <header class="nav-name" id="site-title"></header>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="service.html">Service</a></li>
@@ -24,6 +26,7 @@
     </nav>
   </div>
 
+  <div id="main">
   <div class="gallery">
     <div class="media"><img id="im2" src="" alt="Media 2" /></div>
     <div class="media"><div class="video" id="video1" data-type="html"></div></div>
@@ -35,6 +38,25 @@
     <div class="media"><img id="im4" src="" alt="Media 2" /></div>
     <div class="media"><img id="im5" src="" alt="Media 2" /></div>
   </div>
+  </div>
+
+    <footer class="bottom-container">
+    <a href="https://wa.me/31640077233" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://instagram.com/sun_wei_hao" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://youtube.com/@WeihaoSun-w6o" target="_blank">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="mailto:weihao612@email.com">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.super-prof.nl/jazztrompettist-met-ervaring-geeft-trompetles-jazz-improvisatie-bandleiding-muziektheorie-alle-niveaus.html">
+      <i class="fa-solid fa-book"></i>
+    </a>
+  </footer>
 
   <script src="assets/js/content.js"></script>
   <script src="assets/js/hscroll.js"></script>
